--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@openzeppelin/contracts": "^3.2.1-solc-0.7",
     "chai": "^4.2.0",
     "hardhat": "^2.0.2",
     "merkletreejs": "^0.2.10",
