--- a/package.json
+++ b/package.json
@@ -2,29 +2,52 @@
   "name": "verification-solidity",
   "description": "This repository is for testing the gas costs of different verification strategies.",
   "version": "1.0.0",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
+  "files": [
+    "/contracts"
+  ],
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@openzeppelin/contracts": "^3.2.1-solc-0.7",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/contracts": "^3.3.0",
+    "@typechain/ethers-v5": "^2.0.0",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.0.4",
+    "@types/node": "^14.14.10",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
     "chai": "^4.2.0",
-    "hardhat": "^2.0.2",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "ethereum-waffle": "^3.2.1",
+    "ethers": "^5.0.23",
+    "hardhat": "^2.0.4",
+    "hardhat-typechain": "^0.3.3",
     "merkletreejs": "^0.2.10",
-    "mocha": "^7.2.0",
-    "prettier": "^1.19.1",
-    "prettier-plugin-solidity": "^1.0.0-alpha.60",
-    "web3": "^1.3.0"
+    "mocha": "^8.2.1",
+    "prettier": "2.2.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.1",
+    "solc": "^0.7.5",
+    "solhint": "^3.3.2",
+    "solhint-plugin-prettier": "^0.0.5",
+    "solidity-coverage": "^0.7.13",
+    "ts-generator": "^0.1.1",
+    "ts-node": "^9.1.1",
+    "typechain": "^3.0.0",
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "check": "hardhat check",
-    "gasUsage": "hardhat gasUsage",
     "clean": "hardhat clean",
     "compile": "hardhat compile",
-    "test": "hardhat test"
+    "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:check",
+    "lint:sol": "solhint --config ./.solhint.json \"contracts/**/*.sol\"",
+    "lint:ts": "eslint --config ./.eslintrc.js --ignore-path ./.eslintignore --ext .js,.ts .",
+    "prettier": "prettier --config .prettierrc.json --write .",
+    "prettier:check": "prettier --config .prettierrc.json --check .",
+    "test": "hardhat test",
+    "gasUsage": "hardhat gasUsage",
+    "typechain": "hardhat typechain"
   },
   "repository": {
     "type": "git",
