--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^3.3.0",
-    "@typechain/ethers-v5": "^2.0.0",
+    "@typechain/ethers-v5": "^5.0.0",
     "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.0.4",
-    "@types/node": "^14.14.10",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.11",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
     "chai": "^4.2.0",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
     "ethereum-waffle": "^3.2.1",
-    "ethers": "^5.0.23",
+    "ethereumjs-util": "^7.0.7",
+    "ethers": "^5.0.24",
     "hardhat": "^2.0.4",
     "hardhat-typechain": "^0.3.3",
-    "merkletreejs": "^0.2.10",
+    "merkletreejs": "^0.2.11",
     "mocha": "^8.2.1",
     "prettier": "2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.1",
@@ -33,7 +34,7 @@
     "solidity-coverage": "^0.7.13",
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
-    "typechain": "^3.0.0",
+    "typechain": "^4.0.1",
     "typescript": "^4.1.2"
   },
   "scripts": {
