--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "files": [
     "/contracts"
   ],
+  "dependencies": {
+    "solc": "^0.7.5"
+  },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
@@ -28,7 +31,6 @@
     "mocha": "^8.2.1",
     "prettier": "2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.1",
-    "solc": "^0.7.5",
     "solhint": "^3.3.2",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.13",
