--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,25 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "lib": ["es5", "es6"],
+    "lib": ["es2020"],
+    "target": "es2020",
     "module": "commonjs",
     "moduleResolution": "node",
-    "noImplicitAny": true,
     "outDir": "dist",
+    "pretty": true,
+    "esModuleInterop": true,
     "resolveJsonModule": true,
-    "sourceMap": true,
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "target": "es5",
-    "downlevelIteration": true,
-    "pretty": true
+    "alwaysStrict": true,
+    "noImplicitAny": true,
+    "removeComments": false,
+    "composite": true,
+    "incremental": true,
+    "sourceMap": true,
+    "declaration": true,
+    "declarationMap": true
   },
   "exclude": ["node_modules"],
-  "include": ["artifacts/**/*", "src/**/*", "test/**/*", "typechain/**/*", "hardhat.config.ts"]
+  "include": ["src/**/*", "test/**/*", "typechain/**/*", "hardhat.config.ts"]
 }
