Implement sig verification and merkle tree for validators set
Implement tests for LightClientBridge, ValidatorSetRegistry and MerkleTree
Create a MerkleTree contract which is inherited by the validatorSetRegistry
Move bitfield from ValSetRegistry to LightClientBridge state data
Create test fixture data for repeatable test results
Create test fixture functions for setting up test environments

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,9 @@
     "incremental": true,
     "sourceMap": true,
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "baseUrl": "."
   },
   "exclude": ["node_modules"],
-  "include": ["src/**/*", "test/**/*", "typechain/**/*", "hardhat.config.ts"]
+  "include": ["src/**/*", "test/**/*", "types/**/*", "hardhat.config.ts"]
 }
